--- a/index.html
+++ b/index.html
@@ -16,72 +16,124 @@
 
 </head>
 
-<body class="debug">
+<body class="">
 
     <!-- Header -->
     <header>
-        <div class="container">
+
+        <!-- Header top -->
+        <div class="top-header">
 
             <!-- Brand -->
             <div class="brand">
-                logo
+                <img src="img/logo.svg" alt="logo discord">
             </div>
 
             <!-- Menu -->
             <nav>
                 <ul class="menu">
-                    <li>link</li>
-                    <li>link</li>
-                    <li>link</li>
-                    <li>link</li>
-                    <li>link</li>
+                    <li>Scarica</li>
+                    <li>Perché Discord</li>
+                    <li>Nitro</li>
+                    <li>Sicurezza</li>
+                    <li>Assistenza</li>
                 </ul>
             </nav>
 
             <!-- Login -->
             <div class="login">
-                login
+                <button>Login</button>
             </div>
 
+
         </div>
+
+        <!-- Above -->
+        <section class="above">
+            <div class="container">
+                <div>
+                    <h1>Il tuo posto per parlare</h1>
+                    <p>Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale, o
+                        semplicemente di un piccolo
+                        gruppo di amici che vuole passare il tempo assieme, Discord rende più facile chiacchierare ogni
+                        giorno e ritrovarsi più
+                        spesso.</p>
+                    <div class="group-button">
+                        <button>Scarica per Mac</button>
+                        <button class="alt">Apri Discord nel tuo browser</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+
     </header>
 
     <!-- Main -->
     <main>
 
-        <!-- Above -->
-        <section class="above">
-            <div class="container"></div>
-        </section>
-
         <!-- Standard Section -->
         <section>
             <div class="container">
-                <div class="big-collumn"></div>
-                <div class="small-collumn"></div>
+                <div class="big-collumn">
+                    <img src="img/item1.svg" alt="illustrazione 1">
+                </div>
+                <div class="small-collumn">
+                    <h2>Un luogo a invito con tutto lo spazio necessario per parlare</h2>
+                    <p>I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o
+                        semplicemente parlare della
+                        tua giornata senza intasare una chat di gruppo.</p>
+                </div>
             </div>
         </section>
 
         <!-- Standard Section -->
         <section>
             <div class="container">
-                <div class="small-collumn"></div>
-                <div class="big-collumn"></div>
+                <div class="small-collumn">
+                    <h2>Dove trovarsi é facile</h2>
+                    <p>Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo server possono vedere che
+                        sei li e unirsi
+                        istantaneamente senza dover chiamare.</p>
+                </div>
+                <div class="big-collumn">
+                    <img src="img/item2.svg" alt="illustrazione 2">
+                </div>
             </div>
         </section>
 
         <!-- Standard Section -->
         <section>
             <div class="container">
-                <div class="big-collumn"></div>
-                <div class="small-collumn"></div>
+                <div class="big-collumn">
+                    <img src="img/item3.svg" alt="illustrazione 3">
+                </div>
+                <div class="small-collumn">
+                    <h1>Da pochi a un fandom</h1>
+                    <p>Dai inizio a una community di qualsiasi dimensione con strumenti di moderazione e accesso ai
+                        membri personalizzabile.
+                        Concedi ai membri poteri speciali, crea canali privati, e molto altro.</p>
+                </div>
             </div>
         </section>
 
         <!-- Big Section -->
         <section>
-            <div class="container">
-                <div data-aos="fade-up" data-aos-duration="3000" class="fullwidth-column"></div>
+            <div class="container-fullwidth">
+                <div>
+                    <h2>Tecnologia affidabile per tenersi in contatto</h2>
+                    <p>Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai
+                        ciao in video, guarda gli
+                        amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.
+                    </p>
+                    <img src="img/item4-big.svg" alt="illustrazione 4">
+                </div>
+
+                <!-- Cta -->
+                <div class="cta">
+                    <h4>Pronto a iniziare la tua avventura?</h4>
+                    <button>Scarica per Mac</button>
+
+                </div>
             </div>
         </section>
 
@@ -93,21 +145,76 @@
         <!-- Menu footer -->
         <section>
             <div class="container">
-                <div class="big-collumn"></div>
+                <div class="footer-column">
+                    <h5>Il tuo posto per parlare</h5>
+                    <div class="lang">
+                        <img src="img/ita.png" alt="italiano">
+                        <p>Italiano</p>
+                    </div>
+                    <div class="social">
+                        <i class="fa-brands fa-twitter" style="color: #ffffff;"></i>
+                        <i class="fa-brands fa-instagram" style="color: #ffffff;"></i>
+                        <i class="fa-brands fa-square-facebook" style="color: #ffffff;"></i>
+                        <i class="fa-brands fa-youtube" style="color: #ffffff;"></i>
+                    </div>
+                </div>
                 <div class="group-small-collumn">
-                    <div class="small-collumn"></div>
-                    <div class="small-collumn"></div>
-                    <div class="small-collumn"></div>
-                    <div class="small-collumn"></div>
+                    <div class="small-collumn">
+                        <h6>Prodotto</h6>
+                        <a href="#">Scarica</a>
+                        <a href="#">Perchè Discord</a>
+                        <a href="#">Nitro</a>
+                        <a href="#">Sicurezza</a>
+                        <a href="#">Assistenza</a>
+
+                    </div>
+                    <div class="small-collumn">
+                        <h6>Compagnia</h6>
+                        <a href="#">Chi siamo</a>
+                        <a href="#">Lavora con noi</a>
+                        <a href="#">Marchio</a>
+                        <a href="#">Redazione</a>
+                        <a href="#">Negozio</a>
+
+                    </div>
+                    <div class="small-collumn">
+                        <h6>Risorse</h6>
+                        <a href="#">Scarica</a>
+                        <a href="#">Perchè Discord</a>
+                        <a href="#">Nitro</a>
+                        <a href="#">Sicurezza</a>
+                        <a href="#">Assistenza</a>
+                        <a href="#">Scarica</a>
+                        <a href="#">Perchè Discord</a>
+                        <a href="#">Nitro</a>
+                        <a href="#">Sicurezza</a>
+                        <a href="#">Assistenza</a>
+
+
+                    </div>
+                    <div class="small-collumn">
+                        <h6>Norme</h6>
+                        <a href="#">Scarica</a>
+                        <a href="#">Perchè Discord</a>
+                        <a href="#">Nitro</a>
+                        <a href="#">Sicurezza</a>
+                        <a href="#">Assistenza</a>
+
+                    </div>
+
                 </div>
             </div>
         </section>
 
         <!-- End footer -->
         <section class="footer">
-            <div class="container">
-                <div>Logo</div>
-                <div>Bottone</div>
+            <div class="container footer-line">
+                <div>
+                    <img src="img/logo.svg" alt="logo discord">
+                </div>
+                <div>
+                    <button>Registrati</button>
+                </div>
             </div>
         </section>
 
