--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Discord</title>
@@ -16,22 +17,22 @@
 
 </head>
 
-<body class="">
+<body>
 
     <!-- Header -->
     <header>
 
         <!-- Header top -->
-        <div class="top-header">
+        <div class="header__top">
 
             <!-- Brand -->
-            <div class="brand">
+            <div class="header__top__brand">
                 <img src="img/logo.svg" alt="logo discord">
             </div>
 
             <!-- Menu -->
             <nav>
-                <ul class="menu">
+                <ul class="header__top__nav__menu">
                     <li>Scarica</li>
                     <li>Perché Discord</li>
                     <li>Nitro</li>
@@ -41,8 +42,8 @@
             </nav>
 
             <!-- Login -->
-            <div class="login">
-                <button>Login</button>
+            <div class="header__top__login">
+                <button class="button--small">Login</button>
             </div>
 
 
@@ -59,8 +60,9 @@
                         giorno e ritrovarsi più
                         spesso.</p>
                     <div class="group-button">
-                        <button>Scarica per Mac</button>
-                        <button class="alt">Apri Discord nel tuo browser</button>
+                        <button><i class="fa-solid fa-arrow-down-long fa-xs" style="color: #000000;"></i> Scarica per
+                            Mac</button>
+                        <button class="button--alt">Apri Discord nel tuo browser</button>
                     </div>
                 </div>
             </div>
@@ -73,7 +75,7 @@
 
         <!-- Standard Section -->
         <section>
-            <div class="container">
+            <div class="container container--collumn">
                 <div class="big-collumn">
                     <img src="img/item1.svg" alt="illustrazione 1">
                 </div>
@@ -88,7 +90,7 @@
 
         <!-- Standard Section -->
         <section>
-            <div class="container">
+            <div class="container container--collumn">
                 <div class="small-collumn">
                     <h2>Dove trovarsi é facile</h2>
                     <p>Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo server possono vedere che
@@ -103,7 +105,7 @@
 
         <!-- Standard Section -->
         <section>
-            <div class="container">
+            <div class="container container--collumn">
                 <div class="big-collumn">
                     <img src="img/item3.svg" alt="illustrazione 3">
                 </div>
@@ -144,7 +146,7 @@
 
         <!-- Menu footer -->
         <section>
-            <div class="container">
+            <div class="container container--collumn">
                 <div class="footer-column">
                     <h5>Il tuo posto per parlare</h5>
                     <div class="lang">
