fix: name class

--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
 
         <!-- Standard Section -->
         <section>
-            <div class="container container--collumn">
-                <div class="big-collumn">
+            <div class="container container--column">
+                <div class="big-column">
                     <img src="img/item1.svg" alt="illustrazione 1">
                 </div>
-                <div class="small-collumn">
+                <div class="small-column">
                     <h2>Un luogo a invito con tutto lo spazio necessario per parlare</h2>
                     <p>I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o
                         semplicemente parlare della
@@ -90,14 +90,14 @@
 
         <!-- Standard Section -->
         <section>
-            <div class="container container--collumn">
-                <div class="small-collumn">
+            <div class="container container--column">
+                <div class="small-column">
                     <h2>Dove trovarsi é facile</h2>
                     <p>Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo server possono vedere che
                         sei li e unirsi
                         istantaneamente senza dover chiamare.</p>
                 </div>
-                <div class="big-collumn">
+                <div class="big-column">
                     <img src="img/item2.svg" alt="illustrazione 2">
                 </div>
             </div>
@@ -105,11 +105,11 @@
 
         <!-- Standard Section -->
         <section>
-            <div class="container container--collumn">
-                <div class="big-collumn">
+            <div class="container container--column">
+                <div class="big-column">
                     <img src="img/item3.svg" alt="illustrazione 3">
                 </div>
-                <div class="small-collumn">
+                <div class="small-column">
                     <h1>Da pochi a un fandom</h1>
                     <p>Dai inizio a una community di qualsiasi dimensione con strumenti di moderazione e accesso ai
                         membri personalizzabile.
@@ -146,7 +146,7 @@
 
         <!-- Menu footer -->
         <section>
-            <div class="container container--collumn">
+            <div class="container container--column">
                 <div class="footer-column">
                     <h5>Il tuo posto per parlare</h5>
                     <div class="lang">
@@ -160,8 +160,8 @@
                         <i class="fa-brands fa-youtube" style="color: #ffffff;"></i>
                     </div>
                 </div>
-                <div class="group-small-collumn">
-                    <div class="small-collumn">
+                <div class="group-small-column">
+                    <div class="small-column">
                         <h6>Prodotto</h6>
                         <a href="#">Scarica</a>
                         <a href="#">Perchè Discord</a>
@@ -170,7 +170,7 @@
                         <a href="#">Assistenza</a>
 
                     </div>
-                    <div class="small-collumn">
+                    <div class="small-column">
                         <h6>Compagnia</h6>
                         <a href="#">Chi siamo</a>
                         <a href="#">Lavora con noi</a>
@@ -179,7 +179,7 @@
                         <a href="#">Negozio</a>
 
                     </div>
-                    <div class="small-collumn">
+                    <div class="small-column">
                         <h6>Risorse</h6>
                         <a href="#">Scarica</a>
                         <a href="#">Perchè Discord</a>
@@ -194,7 +194,7 @@
 
 
                     </div>
-                    <div class="small-collumn">
+                    <div class="small-column">
                         <h6>Norme</h6>
                         <a href="#">Scarica</a>
                         <a href="#">Perchè Discord</a>
@@ -210,7 +210,7 @@
 
         <!-- End footer -->
         <section class="footer">
-            <div class="container footer-line">
+            <div class="container container--column footer-line">
                 <div>
                     <img src="img/logo.svg" alt="logo discord">
                 </div>
